fixed z-index of items to get the form to display correctly with the image and form layers.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -237,12 +237,17 @@ iframe {
 
 #hand{
   position: relative;
-
+  z-index: 2;
   left: -30px;
 }
 
 .row {
   margin: 0px;
+}
+
+input, textarea {
+  position: relative;
+  z-index: 4;
 }
 
 
